--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @tasks.each do |task| %>
   <tr>
-    <td><%= task.name %></td>
+    <td><%= task.title %></td>
     <td><%= link_to "タスクの詳細を見る", task_path(task.id) %></td>
     <td><%= link_to "タスクを編集する", edit_task_path(task.id) %></td>
     <td><%= link_to 'タスクを削除する', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
