--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Task<%= @task.id%>の詳細</h1>
 <p><strong>タスク名: </strong><%= @task.title %></p>
 <p><strong>タスク詳細: </strong><%= @task.content %></p>
+<p><strong>タスク終了期限: </strong><%= @task.limit %></p>
 
 <%= link_to '編集へ', edit_task_path(@task.id) %> |
 <%= link_to 'タスク一覧へ', tasks_path %>
