--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,25 +12,18 @@
   <% end %>
 
   <div class="task_title">
-      <%= f.label :title, 'タスク名'%>:
+      <%= f.label :title, 'タスク名'%>
       <%= f.text_field :title %>
   </div>
 
   <div class="task_content">
-      <%= f.label :content, 'タスク詳細'%>:
-      <%= f.text_area :content %>
+      <%= f.label :content, 'タスク詳細'%>
+      <%= f.text_field :content %>
   </div>
 
   <div class="task_limit">
-      <%= f.label :limit, 'タスク終了期限'%>:
-      <%= f.date_select :limit %>
-  </div>
-
-  <div class="task_status">
-      <%= f.label :status, 'タスクの状態' %>:
-      <%= f.radio_button :status, "未着手" %>未着手
-      <%= f.radio_button :status, "着手中" %>着手中
-      <%= f.radio_button :status, "完了" %>完了
+      <%= f.label :limit, 'タスク終了期限'%>
+      <%= f.datetime_select :limit %>
   </div>
 
   <%= f.submit id: "task_submit" %>
