--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
   <tr>
     <th>タスク名</th>
     <th><%= sort_link(@search, :limit, default_order: :desc) %></th>
-    <th></th>
+    <th><%= sort_link(@search, :priority) %></th>
     <th></th>
     <th></th>
   </tr>
@@ -28,6 +28,7 @@
   <tr class="task_row">
     <td><%= task.title %></td>
     <td><%= task.limit %></td>
+    <td><%= task.priority %></td>
     <td><%= link_to "タスク詳細", task_path(task.id) %></td>
     <td><%= link_to "タスク編集", edit_task_path(task.id) %></td>
     <td><%= link_to 'タスク削除', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
