--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,12 +14,14 @@
   </div>
 <% end %>
 
+<%= paginate @tasks %>
 
 <table>
   <tr>
     <th>タスク名</th>
-    <th><%= sort_link(@search, :limit, default_order: :desc) %></th>
+    <th><%= sort_link(@search, :limit) %></th>
     <th><%= sort_link(@search, :priority) %></th>
+    <th><%= sort_link(@search, :created_at, default_order: :desc) %></th>
     <th></th>
     <th></th>
   </tr>
@@ -29,13 +31,13 @@
     <td><%= task.title %></td>
     <td><%= task.limit %></td>
     <td><%= task.priority %></td>
+    <td><%= task.created_at %></td>
     <td><%= link_to "タスク詳細", task_path(task.id) %></td>
     <td><%= link_to "タスク編集", edit_task_path(task.id) %></td>
     <td><%= link_to 'タスク削除', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
   </tr>
 <% end %>
 
-<%= paginate @tasks %>
 
 </table>
 
