--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,9 +19,9 @@
 <table>
   <tr>
     <th>タスク名</th>
-    <th><%= sort_link(@search, :limit) %></th>
-    <th><%= sort_link(@search, :priority) %></th>
-    <th><%= sort_link(@search, :created_at, default_order: :desc) %></th>
+    <th><%= sort_link(@search, :limit, default_order: :asc) %></th>
+    <th><%= sort_link(@search, :priority, default_order: :asc) %></th>
+    <th><%= sort_link(@search, :created_at) %></th>
     <th></th>
     <th></th>
   </tr>
