終了期限初期ソート順の変更

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -19,7 +19,7 @@
 <table>
   <tr>
     <th>タスク名</th>
-    <th><%= sort_link(@search, :limit, default_order: :asc) %></th>
+    <th><%= sort_link(@search, :limit, default_order: :desc) %></th>
     <th><%= sort_link(@search, :priority, default_order: :asc) %></th>
     <th><%= sort_link(@search, :created_at) %></th>
     <th></th>
