ransackを削除し、検索＆ソート機能を実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           <nav class="my-2 my-md-0 mr-md-3">
             <%= link_to 'トップ画面に戻る', root_path %>
             <%= link_to '新規タスクの登録', new_task_path %>
+            <%= link_to '新規ユーザー登録', new_user_path %>
           </nav>
         <a class="btn btn-outline-primary" href="#">Sign up</a>
       </div>
