--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,35 +3,33 @@
 <p><%= notice %></p>
 
 <h6>タスク検索</h6>
-<%= form_tag tasks_path, :method => 'get' do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :title => nil %>
-  </p>
+<%= form_tag(tasks_path, method: 'get') do %>
+  <p>タスク名：<%= text_field_tag :search_title, params[:search_title] %></p>
+  <p>タスクステータス：<%= select_tag :search_status, options_for_select([['全ステータス', ''],
+   ['未着手', '未着手'], ['着手中', '着手中'], ['完了', '完了']], params[:search_status]), :include_blank => true %></p>
+  <%= submit_tag 'Search', :title => nil %>
 <% end %>
 
 <table>
   <tr>
     <th>タスク名</th>
-    <th><%= link_to "終了期限", tasks_path(limit_sort_expired: "true") %></th>
-    <th><%= link_to "優先度", tasks_path(priority_sort_expired: "true") %></th>
-    <th><%= link_to "作成日時", tasks_path %></th>
+    <th><%= link_to "タスク終了期限", tasks_path(limit_sort_expired: "true") %></th>
+    <th><%= link_to "タスク優先度", tasks_path(priority_sort_expired: "true") %></th>
+    <th><%= link_to "タスク作成日時", tasks_path %></th>
     <th></th>
     <th></th>
   </tr>
 
-<% @tasks.each do |task| %>
-  <tr class="task_row">
-    <td><%= task.title %></td>
-    <td><%= task.limit %></td>
-    <td><%= task.priority %></td>
-    <td><%= task.created_at %></td>
-    <td><%= link_to "タスク詳細", task_path(task.id) %></td>
-    <td><%= link_to "タスク編集", edit_task_path(task.id) %></td>
-    <td><%= link_to 'タスク削除', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
-  </tr>
-<% end %>
-
-
+  <% @tasks.each do |task| %>
+    <tr class="task_row">
+      <td><%= task.title %></td>
+      <td><%= task.limit %></td>
+      <td><%= task.priority %></td>
+      <td><%= task.created_at %></td>
+      <td><%= link_to "タスク詳細", task_path(task.id) %></td>
+      <td><%= link_to "タスク編集", edit_task_path(task.id) %></td>
+      <td><%= link_to 'タスク削除', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
+    </tr>
+  <% end %>
 </table>
 
