--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,38 +1,28 @@
-<h5>タスク一覧</h5>
+<h2>タスク一覧</h2>
+<%= link_to "終了期限でソートする", tasks_path(sort_expired: "true") %>
 
 <p><%= notice %></p>
 
-<h6>タスク検索</h6>
-<%= form_tag(tasks_path, method: 'get') do %>
-  <p>タスク名：<%= text_field_tag :search_title, params[:search_title] %></p>
-  <p>タスクステータス：<%= select_tag :search_status, options_for_select([['全ステータス', ''],
-   ['未着手', '未着手'], ['着手中', '着手中'], ['完了', '完了']], params[:search_status]), :include_blank => true %></p>
-  <%= submit_tag 'Search', :title => nil %>
+<h2>タスク検索</h2>
+<%= form_tag(root_path, method: :get) do %>
+  <%= text_field_tag :search %>
+  <%= submit_tag 'Search', name: nil %>
 <% end %>
 
 <table>
   <tr>
-    <th>タスク名</th>
-    <th><% if params[:limit_sort_expired] %><%= link_to "△タスク終了期限", tasks_path %>
-     <% else %><%= link_to "タスク終了期限", tasks_path(limit_sort_expired: "true") %><% end %></th>
-    <th><% if params[:priority_sort_expired] %><%= link_to "△タスク優先度", tasks_path %>
-     <% else %><%= link_to "タスク優先度", tasks_path(priority_sort_expired: "true") %><% end %></th>
-    <th><% if params[:limit_sort_expired] || params[:priority_sort_expired] %><%= link_to "タスク作成日時", tasks_path %>
-     <% else %><%= link_to "▽タスク作成日時", tasks_path %><% end %></th>
-    <th></th>
-    <th></th>
+    <td>タスク名</td>
+    <td></td>
+    <td></td>
   </tr>
 
-  <% @tasks.each do |task| %>
-    <tr class="task_row">
-      <td><%= task.title %></td>
-      <td><%= task.limit %></td>
-      <td><%= task.priority %></td>
-      <td><%= task.created_at %></td>
-      <td><%= link_to "タスク詳細", task_path(task.id) %></td>
-      <td><%= link_to "タスク編集", edit_task_path(task.id) %></td>
-      <td><%= link_to 'タスク削除', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
-    </tr>
-  <% end %>
+<% @tasks.each do |task| %>
+  <tr class="task_row">
+    <td><%= task.title %></td>
+    <td><%= link_to "タスクの詳細を見る", task_path(task.id) %></td>
+    <td><%= link_to "タスクを編集する", edit_task_path(task.id) %></td>
+    <td><%= link_to 'タスクを削除する', task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
+  </tr>
+<% end %>
 </table>
 
