--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,10 @@
           <nav class="my-2 my-md-0 mr-md-3">
             <%= link_to 'トップ画面に戻る', root_path %>
             <%= link_to '新規タスクの登録', new_task_path %>
-            <%= link_to '新規ユーザー登録', new_user_path %>
+            <%= link_to 'ユーザー一覧', users_path %>
           </nav>
-        <a class="btn btn-outline-primary" href="#">Sign up</a>
+        <a class="btn btn-outline-primary" href="#">Sign up</a> 
+        <a class="btn btn-outline-primary" href="#">Log in</a>
       </div>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
