--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Email</th>
       <th>Password digest</th>
       <th>Admin</th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
+        <td><%= user.email %></td>
         <td><%= user.password_digest %></td>
         <td><%= user.admin %></td>
         <td><%= link_to 'Show', user %></td>
