--- a/app/views/admin/tasks/edit.html.erb
+++ b/app/views/admin/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to '詳細へ', task_path(@task.id) %> |
-<%= link_to 'タスク一覧へ', tasks_path %>
+<%= link_to '詳細へ', admin_task_path(@task.id) %> |
+<%= link_to 'タスク一覧へ', admin_tasks_path %>
