--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,20 @@
   <body>
     <header>
       <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h4 class="my-0 mr-md-auto font-weight-normal"><%= link_to '万葉課題', root_path %></h4>
+        <h4 class="my-0 mr-md-auto font-weight-normal">
+          <% if current_user&.admin? %>
+            <%= link_to '万葉課題 for Developer ver.', admin_root_path %>
+          <% else %>
+            <%= link_to '万葉課題', root_path %>
+          <% end %>
+        </h4>
           <nav class="my-2 my-md-0 mr-md-3">
             <%= link_to 'トップ画面に戻る', root_path %>
             <%= link_to '新規タスクの登録', new_task_path %>
-            <%= link_to 'ユーザー一覧', users_path %>
+            <% if current_user&.admin? %>
+              <%= link_to 'ユーザー一覧', admin_users_path %>
+              <%= link_to 'タスク一覧', admin_root_path %>
+            <% end %>
           </nav>
 
           <% if logged_in? %>
@@ -28,14 +37,14 @@
           <% end %>
       </div>
       
-      <div>
+      <div class="container">
         <% flash.each do |key, value| %>
           <%= content_tag(:div, value, class: "#{key}") %>
         <% end %>
       </div>  
     </header>
 
-    <div class = "container">
+    <div class="container">
       <%= yield %>
     </div>
 
