ユーザの管理画面を実装

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -11,11 +11,10 @@
 
 footer{
   width: 100%;
-  background-color: #89c7de;
+  background-color: #89b8de;
   color: #fff;
   text-align: center;
-  padding: 30px 0;
-
-position: absolute;/*←絶対位置*/
+  padding: 10px 0 5px 0;
+  position: absolute;/*←絶対位置*/
   bottom: 0; /*下に固定*/
 }
