--- a/app/views/admin/tasks/index.html.erb
+++ b/app/views/admin/tasks/index.html.erb
@@ -16,6 +16,7 @@
      <% else %><%= link_to "タスク優先度", admin_tasks_path(priority_sort_expired: "true") %><% end %></th>
     <th><% if params[:limit_sort_expired] || params[:priority_sort_expired] %><%= link_to "タスク作成日時", admin_tasks_path %>
      <% else %><%= link_to "▽タスク作成日時", admin_tasks_path %><% end %></th>
+    <th>タスク投稿者</th>
     <th></th>
     <th></th>
   </tr>
@@ -26,9 +27,10 @@
       <td><%= task.limit %></td>
       <td><%= task.priority %></td>
       <td><%= task.created_at %></td>
+      <td><%= task.user.name %></td>
       <td><%= link_to "タスク詳細", admin_task_path(task.id) %></td>
       <td><%= link_to "タスク編集", edit_admin_task_path(task.id) %></td>
-      <td><%= link_to 'タスク削除', task_admin_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
+      <td><%= link_to 'タスク削除', admin_task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
     </tr>
   <% end %>
   <%= paginate @tasks %>
