--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Users</h1>
 
 <table>
@@ -8,8 +6,7 @@
       <th>ID</th>
       <th>Name</th>
       <th>Email</th>
-      <th>Password digest</th>
-      <th>Admin</th>
+      <th>has_tasks</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,11 +17,10 @@
         <td><%= user.id %></td>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= user.admin %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= user.tasks.count %></td>
+        <td><%= link_to 'Show', admin_user_path(user) %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
