--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,6 @@
     <title>Manyo</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -13,18 +12,21 @@
     <header>
       <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h4 class="my-0 mr-md-auto font-weight-normal">
-          <% if current_user&.admin? %>
-            <%= link_to '万葉課題 for Developer ver.', admin_root_path %>
+          <% if @admin %>
+            <%= link_to '万葉課題 for Developer', admin_root_path %>
           <% else %>
             <%= link_to '万葉課題', root_path %>
           <% end %>
         </h4>
           <nav class="my-2 my-md-0 mr-md-3">
-            <%= link_to 'トップ画面に戻る', root_path %>
-            <%= link_to '新規タスクの登録', new_task_path %>
             <% if current_user&.admin? %>
-              <%= link_to 'ユーザー一覧', admin_users_path %>
-              <%= link_to 'タスク一覧', admin_root_path %>
+              <%= link_to 'トップ画面に戻る', admin_root_path %>
+              <%= link_to '新規タスクの登録', new_admin_task_path %>
+              <%= link_to '登録ユーザーの管理', admin_users_path %>
+              <%= link_to '投稿タスクの管理', admin_root_path %>
+            <% else %>
+              <%= link_to 'トップ画面に戻る', root_path %>
+              <%= link_to '新規タスクの登録', new_task_path %>
             <% end %>
           </nav>
 
@@ -49,7 +51,6 @@
     </div>
 
     <footer>
-      <p>----------------------------------------------------------------------------------------------</p>
       <p>@Manyo task memo by Yuya Tsuno</p>
     </footer>
   </body>
