ユーザ管理画面でロールの付与と削除

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= form.label :admin %>
-    <%= form.text_field :admin %>
+    <%= form.check_box :admin %>
   </div>
 
   <div class="actions">
