--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,27 +1,35 @@
-<p>
-  <strong>ID:</strong>
-  <%= @user.id %>
-</p>
+<h4>User:<%= @user.name %>の詳細</h4>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+<div class="user_info">
+  <p><strong>ID:</strong><%= @user.id %></p>
+  <p><strong>Email:</strong><%= @user.email %></p>
+  <p><strong>Password digest:</strong><%= @user.password_digest %></p>
+  <p><strong>Admin:</strong><%= @user.admin %></p>
+</div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+<table>
+  <tr>
+    <th>タスク名</th>
+    <th>タスク終了期限</th>
+    <th>タスク優先度</th>
+    <th>タスク作成日時</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
-
-<p>
-  <strong>Admin:</strong>
-  <%= @user.admin %>
-</p>
+  <% @user.tasks.each do |task| %>
+    <tr class="task_row">
+      <td><%= task.title %></td>
+      <td><%= task.limit %></td>
+      <td><%= task.priority %></td>
+      <td><%= task.created_at %></td>
+      <td><%= link_to "タスク詳細", admin_task_path(task.id) %></td>
+      <td><%= link_to "タスク編集", edit_admin_task_path(task.id) %></td>
+      <td><%= link_to 'タスク削除', admin_task_path(task.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }%></td>
+    </tr>
+  <% end %>
+</table>
 
 <%= link_to 'Edit', edit_admin_user_path(@user) %> |
 <%= link_to 'Back', admin_users_path %>
