--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
   <p><strong>Email:</strong><%= @user.email %></p>
   <p><strong>Admin:</strong><%= @user.admin %></p>
 </div>
+<%= link_to 'Edit', edit_user_path(@user) %>
 
 <table>
   <tr>
@@ -29,6 +30,3 @@
     </tr>
   <% end %>
 </table>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
