--- a/app/views/admin/tasks/_form.html.erb
+++ b/app/views/admin/tasks/_form.html.erb
@@ -28,9 +28,9 @@
 
   <div class="task_status">
     <%= f.label :status, 'タスクの状態' %>:
-    <%= f.radio_button :status, 0 %>未着手
-    <%= f.radio_button :status, 1 %>着手中
-    <%= f.radio_button :status, 2 %>完了
+    <%= f.radio_button :status, "not_started_yet" %>未着手
+    <%= f.radio_button :status, "started" %>着手中
+    <%= f.radio_button :status, "completed" %>完了
   </div>
 
   <div class="task_priority">
