--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
             <% if current_user&.admin? %>
               <%= link_to '一般ユーザー用ページに戻る', root_path %>
               <%= link_to '新規タスクの登録', new_admin_task_path %>
+              <%= link_to '新規ラベルの登録', new_admin_label_path %>
               <%= link_to '登録ユーザーの管理', admin_users_path %>
               <%= link_to '投稿タスクの管理', admin_root_path %>
             <% else %>
