--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,8 +5,11 @@
 <p><strong>タスクステータス: </strong><%= @task.status %></p> 
 <p><strong>タスク優先度: </strong><%= @task.priority %></p>
 <p><strong>タスク投稿者: </strong><%= @task.user.name %></p>
-
-<%= f.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+<p><strong>ラベル: </strong>
+  <% @task.labels.each do |label| %>
+    <span class="label label-info"><%= label.name %></span>
+  <% end %>
+</p>
 
 <%= link_to '編集へ', edit_task_path(@task.id) %> |
 <%= link_to 'タスク一覧へ', tasks_path %>
