--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -40,7 +40,7 @@
 
   <div class="task_labels">
     <% Label.all.each do |label| %>
-      <%= f.check_box :label_ids, { multiple: true, checked: label[:checked], disabled: label[:disabled], include_hidden: false }, label[:id] %>
+      <%= f.check_box :label_ids, { multiple: true, include_hidden: false, checked: @task.label_ids }, label[:id] %>
       <label style="background-color: aquamarine"><%= label.name %></label>
     <% end %>
   </div>
