--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,25 @@
 <h4><%= current_user.name %>のタスク一覧</h4>
 
 <h6>タスク検索</h6>
-<%= form_tag(tasks_path, method: 'get') do %>
-  <p>タスク名：<%= text_field_tag :search_title, params[:search_title] %></p>
-  <p>タスクステータス：<%= select_tag :search_status, options_for_select([['未着手', 0], ['着手中', 1], ['完了', 2]], params[:search_status]), :include_blank => true %></p>
-  <p>ラベル：<%= select("label_id", Label.pluck(:name, :id), { include_blank: true }) %></p>
-  <%= submit_tag 'Search', search_status: nil %>
+<%= form_with url: tasks_path, method: :get, local: true do |form| %>
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :search_title, value: params[:search_title] %>
+  </div>
+
+  <div class="field">
+    <%= form.label :status %>
+    <%= form.select :search_status, options_for_select([['未着手', 0], ['着手中', 1], ['完了', 2]], selected: params[:search_status]), :include_blank => true %>
+  </div>
+
+  <div class="field">
+    <%= form.label :labels %>
+    <%= form.collection_check_boxes(:search_labels, Label.all, :id, :name, checked: params[:search_labels], include_hidden: false) %>
+  </div>
+  
+  <div class="actions">
+    <%= form.submit 'Search', search_status: nil %>
+  </div>
 <% end %>
 
 <table>
