--- a/app/views/admin/tasks/show.html.erb
+++ b/app/views/admin/tasks/show.html.erb
@@ -5,6 +5,11 @@
 <p><strong>タスクステータス: </strong><%= @task.status %></p> 
 <p><strong>タスク優先度: </strong><%= @task.priority %></p>
 <p><strong>タスク投稿者: </strong><%= @task.user.name %></p>
+<p><strong>ラベル: </strong>
+  <% @task.labels.each do |label| %>
+    <span class="label label-info"><%= label.name %></span>
+  <% end %>
+</p>
 
 <%= link_to '編集へ', edit_admin_task_path(@task.id) %> |
 <%= link_to 'タスク一覧へ', admin_tasks_path %> |
